# liwc-python

./: .gitignore  .travis.yml  LICENSE.txt  README.md  setup.cfg  setup.py
.github/: ISSUE_TEMPLATE.md
liwc/: __init__.py  dic.py
liwc/.ipynb_checkpoints/: trie-checkpoint.py
test/: __init__.py  alpha.dic  test_alpha_dic.py
tests/: __init__.py  alpha.dic
