[metadata]
name = liwc
version = 0.4.1
author = Christopher Brown
author_email = chrisbrown@utexas.edu
url = https://github.com/chbrown/liwc-python
description = Linguistic Inquiry and Word Count (LIWC) analyzer (proprietary data not included)
long_description = file: README.md
long_description_content_type = text/markdown
license = MIT

[options]
packages = find:
zip_safe = True
test_suite = test

[bdist_wheel]
universal = 1
