[metadata]
name = liwc
author = Christopher Brown
author_email = chrisbrown@utexas.edu
url = https://github.com/chbrown/liwc-python
description = Linguistic Inquiry and Word Count (LIWC) analyzer (proprietary data not included)
long_description = file: README.md
long_description_content_type = text/markdown
license = MIT

[options]
packages = find:
zip_safe = True
setup_requires =
  pytest-runner
  setuptools-scm
tests_require =
  pytest
  pytest-black

[aliases]
test = pytest

[tool:pytest]
addopts =
  --black

[bdist_wheel]
universal = 1
